Added clock example

--- a/src/styles/Slide/demo.css
+++ b/src/styles/Slide/demo.css
@@ -37,6 +37,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     /*border: 1px solid #CCC;*/
 }
 
